add mongoDB connection and Client MVC

--- a/ClientBaseAppMVC/ClientBaseAppMVC/appsettings.json
+++ b/ClientBaseAppMVC/ClientBaseAppMVC/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ClientDatabase": {
+    "ConnectionString": "mongodb://localhost:27017/",
+    "DatabaseName": "Clients",
+    "ClientsCollectionName": "Clients"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
