--- a/ClientBaseAppMVC/ClientBaseAppMVC/ClientBaseAppMVC.csproj
+++ b/ClientBaseAppMVC/ClientBaseAppMVC/ClientBaseAppMVC.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="8.0.11" />
+    <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
